# a_machine

./: Cargo.toml  README.md  turings_first_example.sh
assets/: turings_first_example.json
src/: cli.rs  keyboard.rs  main.rs  refresher.rs  rules.rs  sprites.rs  state.rs  tape.rs
